initial/src/test/gui/.antlr/BKOOLParser.py
# Generated from d:\PPL\initial\src\test\gui\BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'printBoolean'", "'readString'", "'printString'", 
                     "'super'", "'preventDefault'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'false'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'true'", "'white'", 
                     "'void'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'array'", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "'.'", "','", "';'", "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "LIT", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "STRINGLIT", "TYPE", "ELE_TYPE", "BLOCKCOM", "LINECOM", 
                      "WS", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", 
                      "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", 
                      "STRING", "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "ARRAY", "ID", "PLUS", "MINUS", "MUL", 
                      "DIV", "MOD", "NOT", "AND", "OR", "EQ", "NOT_EQ", 
                      "LT", "LT_EQ", "GT", "GT_EQ", "CONCAT", "LB", "RB", 
                      "LP", "RP", "LSB", "RSB", "DOT", "COMMA", "SEMI", 
                      "COLON", "ASSIGN", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_val_decl = 1
    RULE_var_init = 2
    RULE_recursive_decl = 3
    RULE_arr_typ_decl = 4
    RULE_func_decl = 5
    RULE_list_para = 6
    RULE_para_decl = 7
    RULE_listInt = 8
    RULE_listID = 9
    RULE_stmt = 10
    RULE_assign_stmt = 11
    RULE_if_stmt = 12
    RULE_for_stmt = 13
    RULE_while_stmt = 14
    RULE_do_while_stmt = 15
    RULE_break_stmt = 16
    RULE_cont_stmt = 17
    RULE_return_stmt = 18
    RULE_call_stmt = 19
    RULE_block_stmt = 20
    RULE_expr = 21
    RULE_expr1 = 22
    RULE_expr2 = 23
    RULE_expr3 = 24
    RULE_expr4 = 25
    RULE_expr5 = 26
    RULE_expr6 = 27
    RULE_expr7 = 28
    RULE_expr8 = 29
    RULE_func_call = 30
    RULE_special_func = 31
    RULE_list_expr = 32
    RULE_array_lit = 33

    ruleNames =  [ "program", "val_decl", "var_init", "recursive_decl", 
                   "arr_typ_decl", "func_decl", "list_para", "para_decl", 
                   "listInt", "listID", "stmt", "assign_stmt", "if_stmt", 
                   "for_stmt", "while_stmt", "do_while_stmt", "break_stmt", 
                   "cont_stmt", "return_stmt", "call_stmt", "block_stmt", 
                   "expr", "expr1", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "expr8", "func_call", "special_func", 
                   "list_expr", "array_lit" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    LIT=9
    INTLIT=10
    FLOATLIT=11
    BOOLLIT=12
    STRINGLIT=13
    TYPE=14
    ELE_TYPE=15
    BLOCKCOM=16
    LINECOM=17
    WS=18
    AUTO=19
    BREAK=20
    BOOLEAN=21
    DO=22
    ELSE=23
    FALSE=24
    FLOAT=25
    FOR=26
    FUNCTION=27
    IF=28
    INTEGER=29
    RETURN=30
    STRING=31
    TRUE=32
    WHILE=33
    VOID=34
    OUT=35
    CONTINUE=36
    OF=37
    INHERIT=38
    ARRAY=39
    ID=40
    PLUS=41
    MINUS=42
    MUL=43
    DIV=44
    MOD=45
    NOT=46
    AND=47
    OR=48
    EQ=49
    NOT_EQ=50
    LT=51
    LT_EQ=52
    GT=53
    GT_EQ=54
    CONCAT=55
    LB=56
    RB=57
    LP=58
    RP=59
    LSB=60
    RSB=61
    DOT=62
    COMMA=63
    SEMI=64
    COLON=65
    ASSIGN=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68
    ERROR_CHAR=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def val_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Val_declContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Val_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 68
                    self.val_decl()
                    pass

                elif la_ == 2:
                    self.state = 69
                    self.func_decl()
                    pass


                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.ID):
                    break

            self.state = 74
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Val_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listID(self):
            return self.getTypedRuleContext(BKOOLParser.ListIDContext,0)


        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def arr_typ_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Arr_typ_declContext,0)


        def var_init(self):
            return self.getTypedRuleContext(BKOOLParser.Var_initContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_val_decl




    def val_decl(self):

        localctx = BKOOLParser.Val_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_val_decl)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.listID()
                self.state = 77
                self.match(BKOOLParser.COLON)
                self.state = 80
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKOOLParser.TYPE]:
                    self.state = 78
                    self.match(BKOOLParser.TYPE)
                    pass
                elif token in [BKOOLParser.ARRAY]:
                    self.state = 79
                    self.arr_typ_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 82
                self.match(BKOOLParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.var_init()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def recursive_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Recursive_declContext,0)


        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def arr_typ_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Arr_typ_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_var_init




    def var_init(self):

        localctx = BKOOLParser.Var_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(BKOOLParser.ID)
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.state = 88
                self.match(BKOOLParser.COMMA)
                self.state = 89
                self.recursive_decl()
                pass
            elif token in [BKOOLParser.COLON]:
                self.state = 90
                self.match(BKOOLParser.COLON)
                self.state = 93
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKOOLParser.TYPE]:
                    self.state = 91
                    self.match(BKOOLParser.TYPE)
                    pass
                elif token in [BKOOLParser.ARRAY]:
                    self.state = 92
                    self.arr_typ_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 95
                self.match(BKOOLParser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 98
            self.expr()
            self.state = 99
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Recursive_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.COMMA)
            else:
                return self.getToken(BKOOLParser.COMMA, i)

        def recursive_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Recursive_declContext,0)


        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def arr_typ_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Arr_typ_declContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_recursive_decl




    def recursive_decl(self):

        localctx = BKOOLParser.Recursive_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_recursive_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(BKOOLParser.ID)
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.state = 102
                self.match(BKOOLParser.COMMA)
                self.state = 103
                self.recursive_decl()
                pass
            elif token in [BKOOLParser.COLON]:
                self.state = 104
                self.match(BKOOLParser.COLON)
                self.state = 107
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKOOLParser.TYPE]:
                    self.state = 105
                    self.match(BKOOLParser.TYPE)
                    pass
                elif token in [BKOOLParser.ARRAY]:
                    self.state = 106
                    self.arr_typ_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 109
                self.match(BKOOLParser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 112
            self.expr()
            self.state = 113
            self.match(BKOOLParser.COMMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_typ_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(BKOOLParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(BKOOLParser.LSB, 0)

        def listInt(self):
            return self.getTypedRuleContext(BKOOLParser.ListIntContext,0)


        def RSB(self):
            return self.getToken(BKOOLParser.RSB, 0)

        def OF(self):
            return self.getToken(BKOOLParser.OF, 0)

        def ELE_TYPE(self):
            return self.getToken(BKOOLParser.ELE_TYPE, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_arr_typ_decl




    def arr_typ_decl(self):

        localctx = BKOOLParser.Arr_typ_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arr_typ_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(BKOOLParser.ARRAY)
            self.state = 116
            self.match(BKOOLParser.LSB)
            self.state = 117
            self.listInt()
            self.state = 118
            self.match(BKOOLParser.RSB)
            self.state = 119
            self.match(BKOOLParser.OF)
            self.state = 120
            self.match(BKOOLParser.ELE_TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(BKOOLParser.FUNCTION, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Block_stmtContext,0)


        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def VOID(self):
            return self.getToken(BKOOLParser.VOID, 0)

        def list_para(self):
            return self.getTypedRuleContext(BKOOLParser.List_paraContext,0)


        def INHERIT(self):
            return self.getToken(BKOOLParser.INHERIT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_func_decl




    def func_decl(self):

        localctx = BKOOLParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(BKOOLParser.ID)
            self.state = 123
            self.match(BKOOLParser.COLON)
            self.state = 124
            self.match(BKOOLParser.FUNCTION)
            self.state = 125
            _la = self._input.LA(1)
            if not(_la==BKOOLParser.TYPE or _la==BKOOLParser.VOID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 126
            self.match(BKOOLParser.LB)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.OUT) | (1 << BKOOLParser.INHERIT) | (1 << BKOOLParser.ID))) != 0):
                self.state = 127
                self.list_para()


            self.state = 130
            self.match(BKOOLParser.RB)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.INHERIT:
                self.state = 131
                self.match(BKOOLParser.INHERIT)
                self.state = 132
                self.match(BKOOLParser.ID)


            self.state = 135
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_paraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_decl(self):
            return self.getTypedRuleContext(BKOOLParser.Para_declContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def list_para(self):
            return self.getTypedRuleContext(BKOOLParser.List_paraContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_list_para




    def list_para(self):

        localctx = BKOOLParser.List_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list_para)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.para_decl()
                self.state = 138
                self.match(BKOOLParser.COMMA)
                self.state = 139
                self.list_para()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.para_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def COLON(self):
            return self.getToken(BKOOLParser.COLON, 0)

        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def INHERIT(self):
            return self.getToken(BKOOLParser.INHERIT, 0)

        def OUT(self):
            return self.getToken(BKOOLParser.OUT, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_para_decl




    def para_decl(self):

        localctx = BKOOLParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.INHERIT:
                self.state = 144
                self.match(BKOOLParser.INHERIT)


            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.OUT:
                self.state = 147
                self.match(BKOOLParser.OUT)


            self.state = 150
            self.match(BKOOLParser.ID)
            self.state = 151
            self.match(BKOOLParser.COLON)
            self.state = 152
            self.match(BKOOLParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListIntContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKOOLParser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def listInt(self):
            return self.getTypedRuleContext(BKOOLParser.ListIntContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listInt




    def listInt(self):

        localctx = BKOOLParser.ListIntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listInt)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(BKOOLParser.INTLIT)
                self.state = 155
                self.match(BKOOLParser.COMMA)
                self.state = 156
                self.listInt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(BKOOLParser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def listID(self):
            return self.getTypedRuleContext(BKOOLParser.ListIDContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listID




    def listID(self):

        localctx = BKOOLParser.ListIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_listID)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(BKOOLParser.ID)
                self.state = 161
                self.match(BKOOLParser.COMMA)
                self.state = 162
                self.listID()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.While_stmtContext,0)


        def do_while_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Do_while_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Break_stmtContext,0)


        def cont_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Cont_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Return_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(BKOOLParser.Call_stmtContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_stmt




    def stmt(self):

        localctx = BKOOLParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.if_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.for_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 169
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 170
                self.do_while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 171
                self.break_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 172
                self.cont_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 173
                self.return_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 174
                self.call_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_assign_stmt




    def assign_stmt(self):
